# YOLO-COCO-Converter

./: .gitignore  README.md  pyproject.toml  tmp_pyp.txt
coco_merge/: __init__.py  __main__.py  cli.py  merger.py
scripts/: visualize_labels.py
test/: 20220329_4_1_P1t001.txt
tests/: conftest.py  test_end_to_end.py
yolococo/: __init__.py  __main__.py  cli.py  convert.py
